fix: fixing alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,10 +7,13 @@
 
 
 html,
-body,
-#root {
+body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
+}
+
+* {
   box-sizing: border-box;
 }
 
@@ -26,4 +29,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
